# cann-hcomm

./: CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  blacklist.txt  build.sh  build_third_party.sh  classify_rule.yaml  version.info
src/algorithm/impl/coll_executor/coll_all_gather/: CMakeLists.txt  coll_all_gather_aiv_rdma_executor.cc  coll_all_gather_aiv_rdma_executor.h  coll_all_gather_ars_for_910_93_executor.h  coll_all_gather_comm_executor.cc  coll_all_gather_executor.cc  coll_all_gather_mesh_aiv_executor.cc  coll_all_gather_mesh_aiv_executor.h  coll_all_gather_mesh_aiv_for_910_93_executor.cc  coll_all_gather_mesh_aiv_for_910_93_executor.h  coll_all_gather_mesh_aiv_smallcount_executor.cc  coll_all_gather_mesh_aiv_smallcount_executor.h  coll_all_gather_mid_count_for_910_93_executor.cc  coll_all_gather_mid_count_for_910_93_executor.h  coll_all_gather_ring_executor.h  coll_all_gather_ring_for_910_93_executor.cc  coll_all_gather_ring_for_910_93_executor.h  coll_all_gather_ring_zerocopy_executor.cc  coll_all_gather_ring_zerocopy_pipeline_executor.cc
src/platform/hccp/rdma_agent/adapter/: CMakeLists.txt  ra_adp.c  ra_adp.h  ra_adp_socket.c  ra_adp_socket.h
src/platform/hccp/rdma_agent/client/: CMakeLists.txt  ra_common.c  ra_ctx.c  ra_host.c  ra_init.c  ra_nda.c  ra_ping.c  ra_rdma.c  ra_socket.c  ra_tlv.c
src/platform/hccp/rdma_agent/hdc/: CMakeLists.txt  ra_hdc.c  ra_hdc_ctx.c  ra_hdc_ctx.h  ra_hdc_lite.c  ra_hdc_ping.c  ra_hdc_rdma.c  ra_hdc_socket.c  ra_hdc_tlv.c  ra_hdc_tlv.h  ra_rdma_lite.c
src/platform/hccp/rdma_agent/peer/: CMakeLists.txt  ra_peer.c  ra_peer_ctx.c  ra_peer_ctx.h  ra_peer_nda.c  ra_peer_nda.h  ra_peer_socket.c
src/platform/hccp/rdma_service/: CMakeLists.txt  dl_ibverbs_function.c  dl_nda_function.c  dl_nda_function.h  rs.c  rs.h  rs_comm.c  rs_drv_rdma.c  rs_drv_rdma.h  rs_drv_sensor.c  rs_drv_socket.c  rs_drv_socket.h  rs_epoll.c  rs_inner.h  rs_nda.c  rs_nda.h  rs_ping.c  rs_ping_inner.h  rs_ping_roce.c  rs_rdma.c  rs_rdma.h  rs_rdma_inner.h  rs_socket.c  rs_socket.h
src/platform/hccp/rdma_service/ctx/: dl_ccu_function.c  dl_ccu_function.h  dl_net_function.c  dl_net_function.h  dl_urma_function.c  dl_urma_function.h  rs_ccu.c  rs_ccu.h  rs_ctx.c  rs_ctx.h  rs_ctx_inner.h  rs_esched.c  rs_esched.h  rs_ping_urma.c  rs_ping_urma.h  rs_ub.c  rs_ub.h
src/platform/hccp/rdma_service/tlv/: dl_netco_function.c  rs_adp_nslb.c  rs_adp_nslb.h  rs_tlv.c  rs_tlv.h
test/legacy/st/algorithm/: CMakeLists.txt
test/legacy/st/algorithm/testcase/: CMakeLists.txt
test/st/algorithm/testcase/executor_reduce_testcase_generalization/: CMakeLists.txt  main.cc
test/ut/: CMakeLists.txt
test/ut/aicpu_kfc/aicpu/: CMakeLists.txt  main.cc  ut_aicpu_kfc_interface_utest.cc  ut_aicpu_kfc_unfold_utest.cc
test/ut/aicpu_kfc/misc/: CMakeLists.txt  main.cc
test/ut/aicpu_kfc/stub/: llt_aicpu_kfc_stub_mc2.h
test/ut/common/binary_package/: CMakeLists.txt
test/ut/common/prepare_ut_env/: CMakeLists.txt
test/ut/depends/include/: securec.h  securectype.h
test/ut/depends/include/acl/: acl_base_rt.h  acl_prof.h  acl_rt.h  acl_rt_impl.h  acl_tdt.h  acl_tdt_queue.h
test/ut/depends/include/driver/: ascend_hal.h  (+7 more)
test/ut/device/: CMakeLists.txt  ut_aiv_device_utest.cc  ut_communicator_device_utest.cc
test/ut/framework/cluster_maintenance/: CMakeLists.txt
test/ut/framework/communicator/: CMakeLists.txt  hccl_api_base_test.cc  ut_HcclCommGetStatus_API_test.cc  ut_HcclGetCommName_API_test.cc  ut_HcclSetConfig_API_test.cc  ut_hccl_comm_host.cc
test/ut/framework/dpu_npu_sync/: CMakeLists.txt  ut_sync_data_device_test.cc
test/ut/framework/hcom/: CMakeLists.txt
test/ut/framework/next/: CMakeLists.txt  ut_HcomInitCollComm.cc  ut_hcomm_base.h
test/ut/framework/op_base_api/: CMakeLists.txt  hccl_api_base_test.cc  hccl_api_base_test.h  ut_HcclAllGather_API_test.cc  ut_HcclAllReduce_API_test.cc  ut_HcclAlltoAllV_API_test.cc  ut_HcclAlltoAll_API_test.cc  ut_HcclBatchSendRecv_API_test.cc  ut_HcclBroadcast_API_test.cc  ut_HcclRecv_API_test.cc  ut_HcclReduceScatterV_API_test.cc  ut_HcclReduceScatter_API_test.cc  ut_HcclScatter_API_test.cc  ut_HcclSend_API_test.cc
test/ut/framework/resource/: CMakeLists.txt  hccl_api_base_test.cc  main.cc  ut_HcclCreateOpResCtx_API_test.cc  ut_HcclEngineCtxCopy_API_V2_test.cc  ut_HcclEngineCtxCreate_API_test.cc  ut_HcclEngineCtxDestroy_API_V2_test.cc  ut_HcclEngineCtxGet_API_test.cc  ut_HcclGetRemoteIpcHcclBuf_API_test.cc  ut_channel_API_test.cc
test/ut/impl/: CMakeLists.txt  ut_global_mem_mgr.cc  ut_hccl_impl.cc  ut_hccl_impl_common_new.cc  ut_hccl_impl_new.cc
test/ut/inter/comm/: CMakeLists.txt  main.cc  ut_adapter.cc  ut_allgather_mix_op_base.cc  ut_allreduce_mesh_opbase.cc  ut_alltoall_aiv.cc  ut_coll_alg_operator.cc  ut_comm_halving_doubling.cc  ut_comm_init.cc  ut_dispatcher_ffts.cc  ut_hccl_comm_910B.cc  ut_hccl_impl_alg.cc  ut_hccl_impl_alg_ahc.cc  ut_hccl_impl_alg_double_ring.cc  ut_hccl_impl_alg_double_ring_concurrent.cc  ut_hccl_impl_alg_double_ring_concurrent_allreduce.cc  ut_hccl_impl_alg_nb.cc  ut_hccl_impl_alg_nhr.cc
test/ut/inter/hcom/: CMakeLists.txt  ut_hcom.cc
test/ut/inter/misc/: CMakeLists.txt  ut_hccl_transport_p2p.cc
test/ut/misc/: CMakeLists.txt  ut_heartbeat.cc  ut_interface_multithread.cc  ut_onesided_service.cc  ut_op_base.cc
test/ut/platform/hccp/: CMakeLists.txt
test/ut/platform/hcom/: CMakeLists.txt  ut_comm_config.cc
test/ut/platform/ping_mesh/: CMakeLists.txt  ut_hccn_rping.cc  ut_ping_mesh.cc
test/ut/stub/: CMakeLists.txt  llt_hccl_stub.cc  llt_hccl_stub.h  llt_hccl_stub_fp16.h  llt_hccl_stub_gdr.cc  llt_hccl_stub_mc2.cc  llt_hccl_stub_mc2.h  llt_hccl_stub_platform.cc  llt_hccl_stub_pub.h  llt_hccl_stub_rank_graph.cc  llt_hccl_stub_rank_graph.h  llt_hccl_stub_rts.cc  llt_hccl_stub_sal.cc  llt_next_hccp_stub.cc  llt_next_orion_stub.cc  llt_stub_CcuTransport.h  llt_stub_sec.c
test/ut/stub/legacy/: channel_factory.h  interface_channel.cc  interface_channel.h  llt_stub_ub_transport_lite_impl.cc
(+2840 files in other folders)
